# GObject-examples-hs

./: README.md
misc/: misc.cabal  package.yaml  stack.yaml
misc/app/: Example1.hs  Example2.hsc  Example3.hs  Example4.hs  Example5.hs  ToUpper1.hs  ToUpper2.hs  TypeName.hs
tcomparable/: todo.md
tdouble1/: ChangeLog.md  README.md  package.yaml  stack.yaml  tdouble1.cabal
tdouble1/app/: Main.hs
tdouble1/src/: TDouble.hs
tdouble2/: ChangeLog.md  README.md  package.yaml  stack.yaml  tdouble2.cabal
tdouble2/app/: Main.hs
tdouble2/src/: TDouble.hs
tdouble3/: ChangeLog.md  README.md  package.yaml  stack.yaml  tdouble3.cabal
tdouble3/app/: Main.hs
tdouble3/src/: TDouble.hs  TDouble.hsc
tdouble4/: ChangeLog.md  README.md  package.yaml  tdouble4.cabal
tdouble4/app/: Main.hs
tdouble5/: ChangeLog.md  README.md  package.yaml  stack.yaml  tdouble5.cabal
tdouble5/app/: Main.hs
tdouble5/src/: TDouble.hsc
tdouble6/: ChangeLog.md  README.md  package.yaml  stack.yaml  tdouble6.cabal  todo.md
tdouble6/app/: Main.hs
tdouble6/bak/: Main.hs  TDouble.hs
tdouble6/src/: GObjectExtra.hs  TDouble.hsc
tint/: CHANGELOG.md  package.yaml  stack.yaml
tint/app/: Main.hs
tint/src/: TInt.hsc
