cabal-version: 1.12

name:           tdouble4
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/tdouble4#readme>
homepage:       https://github.com/githubuser/tdouble4#readme
bug-reports:    https://github.com/githubuser/tdouble4/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2022 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    src/TDouble.hsc

source-repository head
  type: git
  location: https://github.com/githubuser/tdouble4

library
  exposed-modules:
      TDouble
  other-modules:
      Paths_tdouble4
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , gi-gobject
    , haskell-gi-base
  default-language: GHC2021

executable tdouble4
  main-is: Main.hs
  other-modules:
      Paths_tdouble4
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , gi-gobject
    , haskell-gi-base
    , tdouble4
  default-language: GHC2021

test-suite tdouble4-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_tdouble4
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , gi-gobject
    , haskell-gi-base
    , tdouble4
  default-language: GHC2021
